<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/btnHome"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/imgHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_home" />

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_guide"
                android:textSize="@dimen/guide_font_size"
                android:text="@string/guideStringHome" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnFound"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgFound"
                android:scaleType="fitXY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_found" />

            <TextView
                android:id="@+id/tvFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_guide"
                android:textSize="@dimen/guide_font_size"
                android:text="@string/guideStringFound" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnCar"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgCar"
                android:scaleType="fitXY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_car" />

            <TextView
                android:id="@+id/tvCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_guide"
                android:textSize="@dimen/guide_font_size"
                android:text="@string/guideStringCar" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnUser"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgUser"
                android:scaleType="fitXY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_user" />

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/guide_font_size"
                android:textColor="@color/color_guide"
                android:text="@string/guideStringUser" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
