<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/orange">

        <TextView
            android:id="@+id/btnRefresh"
            android:gravity="center"
            android:background="@drawable/color_login"
            android:drawableRight="@drawable/map_change"
            android:textSize="@dimen/abc_text_size_title_material"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/titleUser" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/userButton"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/userIcon"
            android:src="@drawable/profile_default"
            android:scaleType="fitXY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:drawablePadding="3dp"
                android:drawableRight="@drawable/ic_user_growth_0"
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/conn_size"
                android:text="登陆账号"
                android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/moneyNum"
                android:textSize="15sp"
                android:text="余额：0元"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/yy_calendar_icon_next" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey" />

    <LinearLayout
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/settingVIP"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/ic_tab_my_prepaidcard_selected"
                android:layout_width="@dimen/setButton_size"
                android:layout_height="@dimen/setButton_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_size"
                android:text="@string/settingVip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingPassword"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/wm_icon_password_press"
                android:layout_width="@dimen/setButton_size"
                android:layout_height="@dimen/setButton_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_size"
                android:text="@string/settingPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingPickname"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/ic_btn_checkin_u"
                android:layout_width="@dimen/setButton_size"
                android:layout_height="@dimen/setButton_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_size"
                android:text="@string/settingPickName" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/settingAddress"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/my_usercheckin_icon_normal"
                android:layout_width="@dimen/setButton_size"
                android:layout_height="@dimen/setButton_size" />

            <TextView
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_size"
                android:text="@string/settingAddress" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingCard"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/logo_bankpay"
                android:layout_width="@dimen/setButton_size"
                android:layout_height="@dimen/setButton_size" />

            <TextView
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_size"
                android:text="@string/settingCard" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingMoney"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/zhifubao_btn"
                android:layout_width="@dimen/setButton_size"
                android:layout_height="@dimen/setButton_size" />

            <TextView
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_size"
                android:text="@string/settingMoney" />
        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey" />

</LinearLayout>