<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height">

        <TextView
            android:id="@+id/btnBack"
            android:padding="@dimen/title_padding"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/back_font_size"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/productBackString"
            android:drawablePadding="@dimen/title_padding"
            android:background="@drawable/color_back"
            android:drawableLeft="@drawable/tb_icon_actionbar_back" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/productImage"
                android:src="@drawable/wedding_photo_default"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="@dimen/product_img_height" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey" />

            <TextView
                android:padding="10dp"
                android:textSize="@dimen/abc_text_size_title_material"
                android:textColor="@color/orange"
                android:text="@string/productMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey" />

            <LinearLayout
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="left"
                    android:singleLine="true"
                    android:id="@+id/productNumBefore"
                    android:textSize="16sp"
                    android:textColor="@color/purple_dark"
                    android:text="原价：???"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:gravity="left"
                    android:singleLine="true"
                    android:id="@+id/productNumAfter"
                    android:textSize="16sp"
                    android:textColor="@color/purple_dark"
                    android:text="会员价：???"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="left"
                    android:singleLine="true"
                    android:id="@+id/productNumber"
                    android:textSize="16sp"
                    android:textColor="@color/purple_dark"
                    android:text="库存：???"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey" />

            <TextView
                android:padding="10dp"
                android:textSize="@dimen/abc_text_size_title_material"
                android:textColor="@color/orange"
                android:text="@string/productIntr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/productIntroduction"
                android:padding="10dp"
                android:textColor="@color/black"
                android:text="空"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textSize="@dimen/login_text_size"
            android:id="@+id/etNum"
            android:singleLine="true"
            android:inputType="number"
            android:ems="5"
            android:background="@android:drawable/edit_text"
            android:hint="购买数量"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/btnPutInCar"
            android:gravity="center"
            android:padding="@dimen/login_dp"
            android:background="@drawable/color_login"
            android:text="@string/putInCar"
            android:textColor="@color/white"
            android:textSize="@dimen/login_text_size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:id="@+id/btnBuy"
            android:gravity="center"
            android:padding="@dimen/login_dp"
            android:background="@drawable/color_login"
            android:text="@string/buy"
            android:textColor="@color/white"
            android:textSize="@dimen/login_text_size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>